# bastion

./: CHANGELOG.md  HARBOR-FORK-FIXES.md  README.md  SECURITY.md  eslint.config.ts  package-lock.json  package.json
.dev/: config.toml
harbor-agent/: Cargo.toml
harbor-agent/src/: captcha_solver.rs  error.rs  main.rs  state.rs
harbor-agent/src/api/: auth.rs  boards.rs  contacts.rs  events.rs  identity.rs  messaging.rs  mod.rs  network.rs  permissions.rs
infrastructure/: community-relay-cloudformation.yaml  libp2p-relay-cloudformation.yaml
mock-peer/: Cargo.toml
mock-peer/src/: main.rs
relay-server/: Cargo.toml  docker-compose.yml
relay-server/src/: auth.rs  main.rs
scripts/: agent  bako-agent  build-relay.sh  test-agent.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: boards.rs  bootstrap.rs  calling.rs  contacts.rs  feed.rs  messaging.rs  mod.rs  network.rs  posts.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/repositories/: boards_repo.rs  messages_repo.rs  mod.rs  posts_repo.rs
src-tauri/src/p2p/: behaviour.rs  network.rs  types.rs
src-tauri/src/p2p/protocols/: mod.rs
src-tauri/src/services/: accounts_service.rs  board_service.rs  calling_service.rs  content_sync_service.rs  feed_service.rs  mod.rs  posts_service.rs
src/components/icons/: index.tsx
src/components/layout/: MainLayout.tsx
src/components/onboarding/: CreateIdentity.tsx  UnlockIdentity.tsx
src/constants/: cloudformation-template.ts
src/hooks/: useTauriEvents.ts
src/pages/: Boards.tsx  Chat.tsx  Feed.tsx  Network.tsx  Settings.tsx  Wall.tsx
src/services/: boards.ts  calling.ts  contacts.ts  feed.ts  index.ts  posts.ts
src/stores/: identity.test.ts  index.ts  messaging.ts  mockPeers.ts  settings.ts  wall.ts
src/styles/: design-system.css
src/types/: calling.ts  feed.ts  index.ts  posts.ts
src/utils/: errorHandler.ts
