[package]
name = "bastion-relay"
version = "0.1.0"
edition = "2021"
description = "Auth-gated libp2p relay for autonomous agents — Isnad CAPTCHA verification gates write access"

[[bin]]
name = "bastion-relay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# libp2p with relay server support
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "relay",
    "identify",
    "ping",
    "request-response",
    "cbor",
    "macros",
    "serde",
] }

# HTTP auth sidecar
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }

# Isnad trust protocol (AI CAPTCHA)
isnad = { git = "https://github.com/Bakobiibizo/ai-isnad.git", branch = "main" }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
rand = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
